# fe-monorepo-bazel

./: .bazelignore  MODULE.bazel  README.md  WORKSPACE.bazel  package.json  pnpm-lock.yaml
host/: package.json
remote/: BUILD.bazel  package.json
remote/src/components/: Button.jsx
