load("@aspect_bazel_lib//lib:copy_to_bin.bzl", "copy_to_bin")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vite/package_json.bzl", vite_bin = "bin")
load("@npm//:vitest/package_json.bzl", vitest_bin = "bin")


# This macro expands to a link_npm_package for each third-party package in package.json
npm_link_all_packages()

CONFIGS = [
    "vite.config.js",
    "package.json",
    "index.html",
]

BUILD_DEPS = [":node_modules/" + d for d in [
    "react",
    "react-dom",
    "@types/react",
    "@types/react-dom",
    "@vitejs/plugin-react",
    "@originjs/vite-plugin-federation",
    "vite",
]]

copy_to_bin(
    name = "vite_srcs_export",
    srcs = glob([
        "src/**/*.css",
        "src/**/*.svg",
        "src/**/*.ts",
        "src/**/*.tsx",
        "src/**/*.js",
        "src/**/*.jsx",
        "public/**/*.json",
        "public/**/*.svg",
    ]),
)

vite_bin.vite(
    name = "dev",
    srcs = BUILD_DEPS + CONFIGS + [":vite_srcs_export"],
    args = ["dev --port 5000 --strictPort"],
    chdir = package_name(),
    out_dirs = ["dist"],
    visibility = ["//visibility:public"],
)

vite_bin.vite(
    name = "build",
    srcs = BUILD_DEPS + CONFIGS + [":vite_srcs_export"],
    args = ["build"],
    chdir = package_name(),
    out_dirs = ["dist"],
    visibility = ["//visibility:public"],
)

vite_bin.vite(
    name = "build_watch",
    srcs = BUILD_DEPS + CONFIGS + [":vite_srcs_export"],
    args = ["build --watch"],
    chdir = package_name(),
    out_dirs = ["dist"],
    visibility = ["//visibility:public"],
)
